# strike

./: .gitignore  .gitmodules  AI-BUILD-LOG.md  AUDIT-FIX-PLAN.md  AUDIT-REPORT.md  CLAUDE.md  CLOB-PLAN.md  INLINE-SETTLEMENT.md  MAINNET_ACTIVE_RESTING_UPGRADE_PLAN_2026-04-28.md  PLAN-vault-ux.md  PLAN.md  PROJECT_BRIEF.md  README.md  REVIEW-PLAN.md  SELL-ORDERS-PLAN.md  SETUP-TODO.md  docker-compose.yml  sdk-plan.md
.github/workflows/: publish-sdk.yml  (+1 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
assets/: banner.html
bot/: .env.example  Dockerfile  package-lock.json  package.json
contracts/: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  foundry.toml  package.json  remappings.txt
docs/: README.md  SUMMARY.md  deployment-guide.md  developer-integration.md  devnet-setup.md  market-lifecycle.md  play-now.md  sdk-docs-plan.md
scripts/: .env.example  create-market.ts  package-lock.json  package.json  resolve-markets.ts  run-integration.sh
sdk/: README.md
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/abi/: BatchAuction.json  FeeModel.json  MarketFactory.json  OrderBook.json  PythResolver.json  Redemption.json  Vault.json
sdk/rust/examples/: place_orders.rs  read_markets.rs  simple_bot.rs  stream_events.rs  track_order_lifecycle.rs
sdk/rust/src/: client.rs  config.rs  contracts.rs  error.rs  lib.rs  nonce.rs  types.rs
sdk/rust/src/chain/: markets.rs  mod.rs  orders.rs  redeem.rs  tokens.rs  vault.rs
sdk/rust/src/events/: mod.rs  scan.rs  subscribe.rs
sdk/rust/src/indexer/: client.rs  mod.rs  types.rs
(+156 files in other folders)
